grafitestyles.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Exo+2:wght@500;700&family=Poppins:wght@300&display=swap');
* {
  margin: 0;
  padding: 0;
  font-family: Poppins;
}

html, body{
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
}
#navbarbackground{
  width: 100%;
  height: 9vh;
  background-color: white;
}

#navbar{
  color: black;
  position: absolute;
  top: 0;
  right: 22vw;
  width: 30vw;
  height: 9vh;
  text-align: center;
  border-collapse: separate;
  border-spacing: 1vw 0;
  /*border: 1px solid black;*/
}

.navbutton{
  /*border: 1px solid black;*/
  width: auto;
  border-collapse: collapse;
  height: 9vh;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: 'Poppins', sans-serif;
  font-size: 1vw;
}

.navbutton:hover{
  color: #949494;
  cursor: pointer;
  /*text-decoration: underline;*/
}

#homebutton{
  position: absolute;
  top: 0;
  left: 3.7vw;
  height: 9vh;
  background-color: white;
  border: none;
  outline: none;
  width: 10vw;
  font-family: 'Exo 2', sans-serif;
  font-size: 2vw;
}

#donatebutton{
  height: 7vh;
  position: absolute;
  top: 1vh;
  right: .5vw;
  width: 10vw;
  font-family: 'Poppins', sans-serif;
  font-size: 1vw;
  border: none;
  outline: none;
  background-color: #ff0000;
  font-weight: bold;
  color: white;
  cursor: pointer;
  border-radius: 5%;
}

#twitterlogo{
  width: 2.5vh;
  height: 2.5vh;
  position: absolute;
  top: 3.25vh;
  right: 17vw;
  cursor: pointer;
}

#facebooklogo{
  width: 2.5vh;
  height: 2.5vh;
  position: absolute;
  top: 3.25vh;
  right: 20vw;
  cursor: pointer;
}

#instagramlogo{
  width: 2.5vh;
  height: 2.5vh;
  position: absolute;
  top: 3.25vh;
  right: 14vw;
  cursor: pointer;
}

#grafitelogo{
  width: 10.5vh;
  height: 9vh;
  position: absolute;
  top: 0;
  left: 0vw;
  cursor: pointer;
}

#homepagemessage{
  width: 100%;
  height: 30vh;
  /*border: 1px solid black;*/
  background: rgba(242, 242, 242, 0);
  text-align: center;
}

#contactform{
  margin: none;
  padding: none;
  border: none;
  position: absolute;
  top: 15vh;
  right: 0vw;
  width: 50vw;
  height: 80vh;
}

#contactinfo{
  font-family: 'Poppins', sans-serif;
  width: 40vw;
  position: absolute;
  top: 30vh;
  left: 9vw;
  text-align: center;
  font-size: 1vw;
}

#contactheader{
  font-family: 'Poppins', sans-serif;
  width: 58vw;
  text-align: center;
  font-size: 2vw;
  font-weight: bold;
  position: absolute;
  top: 20vh;
  left: 0vh;
  height: 10vh;
}

#missionheader{
  font-family: 'Poppins', sans-serif;
  font-size: 2.5vw;
  font-weight: bold;
  position: absolute;
  top: 19vh;
  left: 8vw;
}

#missioninfo{
  font-family: 'Poppins', sans-serif;
  font-size: 1vw;
  position: absolute;
  top: 28vh;
  right: 8vw;
  width: 50vw;
}

.serviceRequestButton{
  background-color: #ff0000;
  height: 8vh;
  border: none;
  font-family: Poppins;
  font-weight: bold;
  color: white;
  font-size: 120%;
  margin: 0 auto;
  display: block;
  cursor: pointer;
  padding: 1vw;
}

.serviceRequestForm{
  width: 60vw;
  height: 80vh;
  margin: 10vh auto auto auto;
  display: block;
}

#teamgrid{
  display: grid;
  width: 58em;
  margin: 0 auto;
  border: 1px solid black;
  grid-template-columns: 27em 27em;
  grid-column-gap: 4em;
  grid-row-gap: 2vh;
  margin-top: 4vh;
}

.teamgridimage{
  height: 62vh;
}

.teamgriddesc{
  padding: 0.5vw;
  background-color: white;
  color: black;
  font-family: Poppins;
  font-size: 98%;
}

#footer{
  width: 100%;
  position: static;
  bottom: 0;
  height: 30vh;
  background-color: black;
  margin-top: 5vh;
}

#contentWrap{
  position: static;
  min-height: 100vh;
  width: 100%;
}

#footerGrafiteText{
  display: inline-block;
  box-sizing: border-box;
  font-size: 2vw;
  font-family: 'Exo 2', sans-serif;
  position: relative;
  top: 10vh;
  left: 13vw;
  color: white;
}

#footerTable{
  width: 20vw;
  position: relative;
  left: 70vw;
  border-collapse: separate;
  border-spacing: 0 3vh;
}

.footerTableButton{
  color: white;
}

#footerImages {
  margin: 0;
  box-sizing: border-box;
  display: inline-block;
  position: relative;
  top: 15vh;
  left: 6.8vw;
}

